# backend/src/main/java/com/lqq/supportflow/model/domain/ModelConfig.java
@@ -1,3 +1,3 @@
 package com.lqq.supportflow.model.domain;
 
-public record ModelConfig(Long id, String name, ModelProtocol protocol, String baseUrl, String modelName, boolean isDefault) { }
+public record ModelConfig(@com.fasterxml.jackson.databind.annotation.JsonSerialize(using=com.fasterxml.jackson.databind.ser.std.ToStringSerializer.class) Long id, String name, ModelProtocol protocol, String baseUrl, String modelName, boolean isDefault) { }
